Blender can't find Cycles render #68126

Closed
opened 2019-08-02 12:48:07 +02:00 by Erick Tukuniata · 8 comments

System Information
Operating system: Windows-8.1-6.3.9600 64 Bits
Graphics card: AMD Radeon R7 200 Series ATI Technologies Inc. 4.5.13416 Core Profile Context 15.300.1025.0

Blender Version
Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-01 22:36, hash: 066a7173c0
Worked: (optional)

Short description of error
Cycles render is not available under render menu

Exact steps for others to reproduce the error

check the image below This build is from build bot and with my own build i m still getting the same problem.
no_cycles.png

**System Information** Operating system: Windows-8.1-6.3.9600 64 Bits Graphics card: AMD Radeon R7 200 Series ATI Technologies Inc. 4.5.13416 Core Profile Context 15.300.1025.0 **Blender Version** Broken: version: 2.81 (sub 1), branch: master, commit date: 2019-08-01 22:36, hash: `066a7173c0` Worked: (optional) **Short description of error** Cycles render is not available under render menu **Exact steps for others to reproduce the error** check the image below This build is from build bot and with my own build i m still getting the same problem. ![no_cycles.png](https://archive.blender.org/developer/F7645525/no_cycles.png)

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @dark999

Added subscriber: @dark999

you have compiled your Blender? it is same issue with Blender daily build? https://builder.blender.org/download/

it work fine here on linux Blender 2.80-5fde4494f654 (2019-07-31) AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 430.40
Screenshot_20190802_125700.png
Please, update this report following strictly this form https://wiki.blender.org/wiki/Process/Bug_Reports

you have compiled your Blender? it is same issue with Blender daily build? https://builder.blender.org/download/ it work fine here on linux Blender 2.80-5fde4494f654 (2019-07-31) AMD FX8350, 16GB DDR3, GTX690 2+2 GB VRam- Nvidia drivers 430.40 ![Screenshot_20190802_125700.png](https://archive.blender.org/developer/F7645533/Screenshot_20190802_125700.png) Please, update this report following strictly this form https://wiki.blender.org/wiki/Process/Bug_Reports

This issue was referenced by b5807be437

This issue was referenced by b5807be43780c575ef278e917abf2e71c4b7b169

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-08-02 13:07:11 +02:00

Well that was quick, thanks Brecht :)

Well that was quick, thanks Brecht :)

I compiled the 2019-08-02 11:04, hash: b5807be437 but problem still persist...

I compiled the 2019-08-02 11:04, hash: `b5807be437` but problem still persist...

Sorry i had to load factory settings, now we are good :)

Sorry i had to load factory settings, now we are good :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68126
No description provided.