Fix T68126: Cycles not enabled with factory settings