source/blender/blenkernel/intern/blendfile.c
@@ -574,6 +574,7 @@ UserDef *BKE_blendfile_userdef_from_defaults(void)
         "io_scene_gltf2",
         "io_scene_obj",
         "io_scene_x3d",
+        "cycles",
     };
     for (int i = 0; i < ARRAY_SIZE(addons); i++) {
       bAddon *addon = BKE_addon_new();
